Rewrite test file