@@ -12,12 +12,15 @@ import org.opendataloader.pdf.api.Config;
 import org.opendataloader.pdf.containers.StaticLayoutContainers;
 import org.opendataloader.pdf.processors.DocumentProcessor;
 import org.verapdf.wcag.algorithms.entities.IObject;
+import org.verapdf.wcag.algorithms.entities.content.ImageChunk;
+import org.verapdf.wcag.algorithms.entities.geometry.BoundingBox;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -35,9 +38,9 @@ class ImagesUtilsTest {
         // When
         try {
             Path path = Paths.get(testPdf.getPath());
-            StaticLayoutContainers.setImagesDirectory(path.getFileName().toString().substring(0, path.getFileName().toString().length() - 4) + "_images");
-            ImagesUtils.createImagesDirectory(outputFolder + File.separator + StaticLayoutContainers.getImagesDirectory());
-            // Then - verify figures directory was created in writeImage()
+            StaticLayoutContainers.setImagesDirectory(outputFolder + File.separator + path.getFileName().toString().substring(0, path.getFileName().toString().length() - 4) + "_images");
+            ImagesUtils.createImagesDirectory(StaticLayoutContainers.getImagesDirectory());
+            // Then - verify figures directory was created in createImagesDirectory()
             String expectedFiguresDirName = testPdf.getName().substring(0, testPdf.getName().length() - 4) + "_images";
             Path expectedFiguresPath = Path.of(outputFolder, expectedFiguresDirName);
 
@@ -63,24 +66,21 @@ class ImagesUtilsTest {
         // Given
         Path tempDir = Files.createTempDirectory("htmlgen-test");
         File testPdf = new File("../../samples/pdf/images-test.pdf");
-        String s = testPdf.getAbsolutePath();
-
+        String outputFolder = tempDir.toString();
         // When
         try {
             // Then - if ContrastRatioConsumer wasn't initialized,
             // it would be null and cause NPE when used
-            assertNull(ImagesUtils.contrastRatioConsumer);
-            StaticLayoutContainers.resetImageIndex();
-            Config config = new Config();
-            config.setGenerateHtml(true);
-            config.setOutputFolder("../../samples/temp");
-            // Initializing contrastRatioConsumer in writeImage()
-            DocumentProcessor.processFile(testPdf.getAbsolutePath(), config);
-            assertNotNull(ImagesUtils.contrastRatioConsumer);
-            String outputFolder = config.getOutputFolder();
-            // Verify HTML writer was created
-            Path htmlPath = Path.of(outputFolder, "images-test.html");
-            // HTML file is created by FileWriter in constructor but is empty until writeToHtml
+            Path path = Paths.get(testPdf.getAbsolutePath());
+            assertNull(ImagesUtils.getContrastRatioConsumer());
+            StaticLayoutContainers.setImagesDirectory(outputFolder + File.separator + path.getFileName().toString().substring(0, path.getFileName().toString().length() - 4) + "_images");
+            ImageChunk imageChunk = new ImageChunk(new BoundingBox(0));
+            // Initializing contrastRatioConsumer in write()
+            ImagesUtils.write(imageChunk, testPdf.getAbsolutePath(),"");
+            assertNotNull(ImagesUtils.getContrastRatioConsumer());
+            // Verify file was created
+            Path htmlPath = Path.of(StaticLayoutContainers.getImagesDirectory(), "imageFile1.png");
+            // PNG file is created
             assertTrue(Files.exists(htmlPath), "HtmlGenerator initialized successfully");
         } finally {
             // Cleanup
